working with header

--- a/index.html
+++ b/index.html
@@ -7,16 +7,32 @@
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
-      href="http://fonts.googleapis.com/css?family=Monserrat:regular,500,600,700,800&displat=swap"
+      href="http://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800&displat=swap"
     />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <div class="wrapper">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-      aliquam molestias ipsam, nemo velit facilis iure sapiente incidunt quasi
-      nihil consectetur nesciunt id veritatis est ex reiciendis fugit blanditiis
-      dicta?
-    </div>
+  <body class="body">
+    <header class="header">
+      <div class="header__container _container">
+        <a class="header__logo" href="">Relvise</a>
+        <nav class="header__menu menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="">Home</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="">Product</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="">Pricing</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
