--- a/index.html
+++ b/index.html
@@ -13,26 +13,55 @@
     <title>Document</title>
   </head>
   <body class="body">
-    <header class="header">
-      <div class="header__container _container">
-        <a class="header__logo" href="">Relvise</a>
-        <nav class="header__menu menu">
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a class="menu__link" href="">Home</a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="">Product</a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="">Pricing</a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="">Contact</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <div class="wrapper">
+      <header class="header">
+        <div class="header__container _container">
+          <a class="header__logo" href="">Relvise</a>
+          <nav class="header__menu menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a class="menu__link" href="">Home</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="">Product</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="">Pricing</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="">Contact</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <main class="page">
+        <div class="page__main-block main-block">
+          <div class="main-block__container _container">
+            <div class="main-block__body">
+              <h1 class="main-block__title">
+                Finance and consultance solution
+              </h1>
+              <div class="main-block__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+              </div>
+              <div class="main-block__buttons">
+                <a class="main-block__button" href="">Get quote</a>
+                <a class="main-block__button main-block__button_border" href=""
+                  >Now learn more</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="main-block__image _ibg">
+            <img
+              src="https://catherineasquithgallery.com/uploads/posts/2021-02/1614345750_12-p-svetlii-fon-slaida-12.jpg"
+              alt="cover"
+            />
+          </div>
+        </div>
+      </main>
+      <footer class="footer">я подвал</footer>
+    </div>
   </body>
 </html>
