services and adventages

--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
                 Finance and consultance solution
               </h1>
               <div class="main-block__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+                We know how large objects will act, but things on a small scale.
               </div>
               <div class="main-block__buttons">
-                <a class="main-block__button" href="">Get quote</a>
+                <a class="main-block__button main-block__button_orange" href=""
+                  >Get quote Now</a
+                >
                 <a class="main-block__button main-block__button_border" href=""
-                  >Now learn more</a
+                  >Learn more</a
                 >
               </div>
             </div>
@@ -60,6 +62,70 @@
             />
           </div>
         </div>
+        <section class="page__services services">
+          <div class="services__container _container">
+            <div class="services__body">
+              <div class="services__column">
+                <div class="services__item item-service">
+                  <div class="item-service__icon">
+                    <img src="./img/services/service.svg" alt="service" />
+                  </div>
+                  <div class="item-service__title">Invironmental Cosulting</div>
+                  <div class="item-service__text">
+                    We focus on ergonomics and meetings you where you work.
+                  </div>
+                </div>
+              </div>
+              <div class="services__column">
+                <div class="services__item item-service">
+                  <div class="item-service__icon">
+                    <img src="./img/services/service.svg" alt="service" />
+                  </div>
+                  <div class="item-service__title">Invironmental Cosulting</div>
+                  <div class="item-service__text">
+                    We focus on ergonomics and meetings you where you work.
+                  </div>
+                </div>
+              </div>
+              <div class="services__column">
+                <div class="services__item item-service item-service_green">
+                  <div class="item-service__icon">
+                    <img src="./img/services/service.svg" alt="service" />
+                  </div>
+                  <div class="item-service__title">Invironmental Cosulting</div>
+                  <div class="item-service__text">
+                    We focus on ergonomics and meetings you where you work.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="page_advantages advantages">
+          <div class="advantages__container _container">
+            <div class="advantages__header header-block">
+              <h2 class="header-block__title">Designing Better Experiece</h2>
+              <div class="header-block__sub-title">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus
+                cumque eos laudantium tenetur ex tempora culpa, magni, iusto,
+              </div>
+              <div class="advantages__body">
+                <div class="advantages__column">
+                  <div class="advantages__item">
+                    <div class="advantages__icon">
+                      <img
+                        src="./img/services/service.svg"
+                        alt="Consumer Products"
+                      />
+                    </div>
+                    <div class="advantages__value">972 +</div>
+                    <div class="advantages__text">Consumer Products</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer">я подвал</footer>
     </div>
