--- a/index.html
+++ b/index.html
@@ -122,6 +122,42 @@
                     <div class="advantages__text">Consumer Products</div>
                   </div>
                 </div>
+                <div class="advantages__column">
+                  <div class="advantages__item">
+                    <div class="advantages__icon">
+                      <img
+                        src="./img/services/service.svg"
+                        alt="Consumer Products"
+                      />
+                    </div>
+                    <div class="advantages__value">972 +</div>
+                    <div class="advantages__text">Consumer Products</div>
+                  </div>
+                </div>
+                <div class="advantages__column">
+                  <div class="advantages__item">
+                    <div class="advantages__icon">
+                      <img
+                        src="./img/services/service.svg"
+                        alt="Consumer Products"
+                      />
+                    </div>
+                    <div class="advantages__value">972 +</div>
+                    <div class="advantages__text">Consumer Products</div>
+                  </div>
+                </div>
+                <div class="advantages__column">
+                  <div class="advantages__item">
+                    <div class="advantages__icon">
+                      <img
+                        src="./img/services/service.svg"
+                        alt="Consumer Products"
+                      />
+                    </div>
+                    <div class="advantages__value">972 +</div>
+                    <div class="advantages__text">Consumer Products</div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
